...
 * @param onOptionSelected: The callback when an option is selected
 */
@Composable
fun DropdownFilterChip(
    selectedOption: String,
    options: List<String>,
    testTag: String,
    onOptionSelected: (String) -> Unit
) {
  var expanded by remember { mutableStateOf(false) }
  var selectedOption1 by remember { mutableStateOf(selectedOption) }

  Box(modifier = Modifier.padding(8.dp).testTag(testTag)) {
...
